--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    CIA bus turinys
+    <!-- header>img+nav>a*5 -->
+  <header>
+<img src="logo.webp" alt="logo">
+<nav>
+    <!-- jie noriu kelis is karto tai rasau a*5     -->
+    <a href="#">Home</a>
+    <a href="#">Tracks</a>
+    <a href="#">Library</a>
+    <a href="#">Community</a>
+    <a href="#">Sign in</a>
+</nav>
+  </header>
+<main>
+    <div>
+        <h1>404</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+    </div>
+<img src="mergaite.webp" alt="mergicka">
+</main>
 </body>
 </html>
+
