--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mergaite</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <header>
 <img src="logo.webp" alt="logo">
 <nav>
-    <!-- jie noriu kelis is karto tai rasau a*5     -->
+    <!-- jei noriu kelis is karto tai rasau a*5     -->
     <a href="#">Home</a>
     <a href="#">Tracks</a>
     <a href="#">Library</a>
@@ -24,7 +24,7 @@
         <h1>404</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
     </div>
-<img src="mergaite.webp" alt="mergicka">
+    <img src="mergaite.webp" alt="mergicka">
 </main>
 </body>
 </html>
