--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
+    <!-- realiatyvus taskas, visada prideti prie nuorodos ./ -->
 </head>
 <body>
     <!-- header>img+nav>a*5 -->
   <header>
-<img src="logo.webp" alt="logo">
+<img src="./logo.webp" alt="logo">
 <nav>
     <!-- jei noriu kelis is karto tai rasau a*5     -->
     <a href="#">Home</a>
@@ -24,7 +25,7 @@
         <h1>404</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
     </div>
-    <img src="mergaite.webp" alt="mergicka">
+    <img src="./mergaite.webp" alt="mergicka">
 </main>
 </body>
 </html>
